# smart-voice

./: .gitignore  LICENSE  README.md  SmartVoice.spec  pyproject.toml  requirements.txt
resources/: default_config.json
scripts/: package_windows.ps1  run_dev.ps1
smartvoice/: __main__.py  app.py  main.py
smartvoice/audio/: recorder.py
smartvoice/core/: models.py  workflow.py
smartvoice/hotkeys/: listener.py
smartvoice/injection/: clipboard.py
smartvoice/processing/: cleanup.py
smartvoice/storage/: config_store.py  history_store.py
smartvoice/transcription/: credentials.py  factory.py  faster_whisper_engine.py  openai_engine.py
smartvoice/ui/: tray.py
tests/: test_config_store.py  test_history_store.py  test_hotkey_listener.py  test_mode_processor.py  test_transcription_engines.py  test_workflow.py
