[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartvoice"
version = "0.1.0"
description = "Windows-first local voice dictation and text injection tool for developer workflows."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prabhash Padhan" }]
dependencies = [
  "numpy>=1.24",
  "sounddevice>=0.4.6",
  "faster-whisper>=1.0.0",
  "pyperclip>=1.8.2",
  "keyboard>=0.13.5",
  "platformdirs>=4.0.0",
  "openai>=1.0.0"
]

[project.optional-dependencies]
ui = ["PySide6>=6.6"]
test = ["pytest>=7.4"]

[project.scripts]
smartvoice = "smartvoice.main:main"

[tool.setuptools.packages.find]
include = ["smartvoice*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
